Switch to Reddit URL.

--- a/static/index.html
+++ b/static/index.html
@@ -70,7 +70,7 @@
 
                 container.append(newImage);
                 var link = $('<a>')
-                link.attr('href', thing.fullurl)
+                link.attr('href', thing.redditurl)
                 link.text(thing.sourceName + ' - ' + thing.title)
                 container.append(link);
 
